<resources>
    <string name="app_name">3D Tracker Vive</string>
    <string name="about_app">The application was developed by Martin Donát. </string>
    <string name="app_year_created">©2020</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_about_app">About app</string>
    <string name="action_settings">Settings</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="disconnected">Disconnected</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="device_name_formatted">Name: %1$s</string>
    <string name="device_mac_addr_formatted">MAC: %1$s</string>
    <string name="device_state">State: %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="geometry_is_not_set">Geometry is not set</string>
    <string name="geometry_is_set">Geometry is set</string>
    <string name="receiving_coordinates">Receiving coordinates</string>
    <string name="no_3d_tracker_was_found">No 3D tracker was found</string>
    <string name="start_scan_nearby_3d_trackers">Start scan nearby 3D trackers by pulling down</string>
    <string name="threed_trackers">3D Trackers</string>
    <string name="position_rendering">Position rendering</string>
    <string name="stop_scanning">Stop scanning</string>
    <string name="bluetooth_is_not_enabled">Bluetooth is not enabled. In order to use this app you need to enable it.</string>
    <string name="location_permissions_are_not_enabled">Location permissions are not permitted. App cannot scan nearby 3D trackers.</string>
    <string name="ok">Ok</string>
    <string name="now_you_are_admin">Now you are admin!</string>
    <string name="geometry">Geometry</string>
    <string name="base_station_number_formatted">Base station: %1$d</string>
    <string name="origin_formatted">Origin: %1$f %2$f %3$f</string>
    <string name="rotation">Rotation:</string>
    <string name="matrix_row_formatted">%1$f %2$f %3$f</string>
    <string name="chosen_file_could_not_be_opened">Chosen file could not be opened</string>
    <string name="add">Add</string>
    <string name="file_with_station_geom_could_not_be_stored">File with base station\'s geometry could not be saved</string>
    <string name="there_is_no_base_station_geometry">There is no base station\'s geometry. Please add it.</string>
    <string name="actual_geometry">Actual geometry</string>
    <string name="stored_geometry">Stored geometry</string>
    <string name="swap_geometry">Swap geometry</string>
    <string name="connected_colon_formatted">Connected: %1$s</string>
    <plurals name="number_of_trackers">
        <item quantity="zero">no tracker</item>
        <item quantity="one">%d tracker</item>
        <item quantity="few">%d trackers</item>
        <item quantity="many">%d trackers</item>
        <item quantity="other">no tracker</item>
    </plurals>
    <string name="change_background">Change background</string>
    <string name="device_does_not_support_opengl">This device does not support OpenGL 3.0 and therefore positions cannot be rendered.</string>
    <string name="info">Info</string>
    <string name="master_base_station">Base Station master - b</string>
    <string name="slave_base_station">Base Station slave - c</string>
    <string name="length_of_axis_is_one_meter">The length of the axis is 1 meter.</string>
    <string name="another_devices_are_threed_trackers">Other devices are 3D trackers.</string>
    <string name="geometry_was_successfully_set">The geometry was successfully set.</string>
    <string name="geometry_was_not_successfully_set">The geometry was not successfully set.</string>
    <string name="reading_geometry">Reading geometry</string>
    <string name="sending_geometry">Sending geometry</string>
    <string name="enabling_notify">Enabling notify</string>
    <string name="not_receiving_coordinates">Not receiving coordinates</string>
</resources>
