<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trackers"
            android:icon="@drawable/ic_cube_outline"
            android:title="@string/threed_trackers" />
        <item
            android:id="@+id/nav_geometry"
            android:icon="@drawable/ic_matrix"
            android:title="@string/geometry"
            android:visible="false" />
        <item
            android:id="@+id/nav_renderer"
            android:icon="@drawable/ic_axis"
            android:title="@string/position_rendering" />
    </group>

    <group
        android:id="@+id/menu_additional_items">
        <item
            android:id="@+id/nav_about_app"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about_app" />
    </group>
</menu>
