<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="24dp"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Master Base Station -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/content_padding_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_marginEnd="16dp"
            android:background="@color/colorBaseStationMaster"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:textAppearance="@style/AppTheme.TextAppearance.Body"
            android:text="@string/master_base_station"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Slave Base Station -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/content_padding_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_marginEnd="16dp"
            android:background="@color/colorBaseStationSlave"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:textAppearance="@style/AppTheme.TextAppearance.Body"
            android:text="@string/slave_base_station"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- 3D Trackers -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/content_padding_half"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="@color/colorTrackerBlueMiddle"
            android:layout_width="12dp"
            android:layout_height="24dp" />

        <View
            android:layout_marginEnd="16dp"
            android:background="@color/colorTrackerOrangeMiddle"
            android:layout_width="12dp"
            android:layout_height="24dp" />

        <TextView
            android:textAppearance="@style/AppTheme.TextAppearance.Body"
            android:text="@string/another_devices_are_threed_trackers"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Axis -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_axis"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:textAppearance="@style/AppTheme.TextAppearance.Body"
            android:text="@string/length_of_axis_is_one_meter"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>